--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -27,7 +27,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install green
-        python -m pip install black
+        python -m pip install --pre black
         python -m pip install -r requirements.txt
     - name: Lint with flake8
       run: |
